@@ -8,6 +8,7 @@
 * Updated #full_restrictors to provide all restrictors
 * Updated view helpers to provide all restrictors
 * Updated form building to use proper *_ids naming scheme
+* Restrictors not added if table does not exist (allows restrictors to be defined before migration has setup model)
 
 == v0.1.1
 * Fixed class eval blocks
